@@ -1,6 +1,7 @@
 0.6.5
 - Fix self test build problem on clean system (Sterling X. Winter)
 - Only open regular files in filecap
+- Make building Python bindings optional
 
 0.6.4
 - Update packet socket code to print interface
